--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -18,26 +18,28 @@
             <div class="logo_container">
                 <div class="logo navbar-brand">
                     <a href="">
-                        <img class="logo" src="\static\imgs\cans-r-us-llc_FullColor_Logo.png" class="img-responsive" alt="CANS R US, LLC | Portable Toilets, Handicap Units, Handwash Stations - We'll take care of YOUR business">
+                        <img class="logo" src="\static\imgs\cans-r-us-llc_FullColor_Logo.png" class="img-responsive"
+                            alt="CANS R US, LLC | Portable Toilets, Handicap Units, Handwash Stations - We'll take care of YOUR business">
                     </a>
                 </div>
             </div>
             <div class="social_container">
                 <div class="social">
                     <!-- email needs to be fixed!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <a class="email_img" href="mailto:greg@cansrusLLC.com">
+                    <a class="email_img" href="mailto:greg@cansrusllc.com">
                         <img src="\static\imgs\mail.png" alt="email icon image">
                     </a>
                     <a class="location_img" href="https://goo.gl/maps/8EXjbuJDmLUvk7nMA">
                         <img src="\static\imgs\location.png" alt="location icon image">
                     </a>
-                    <h6><a  class="link" style="font-size:large" href="/contact" alt="contact page link">Contact us</a> for a quote today!</h6>
+                    <h6><a class="link" style="font-size:large" href="/contact" alt="contact page link">Contact us</a>
+                        for a quote today!</h6>
                 </div>
             </div>
         </div>
     </div>
     <!-- end header !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-    
+
 
     <!--burger navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
@@ -68,12 +70,13 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="container">
         <!-- main page top image  -->
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="main_img">
-                <img class="img-responsive header_img" src="\static\imgs\header1.jpg" alt="row of portable toilets for rent supplied by Cans R Us for a community event" >
+                <img class="img-responsive header_img" src="\static\imgs\header1.jpg"
+                    alt="row of portable toilets for rent supplied by Cans R Us for a community event">
                 <p class="img_quote">
                     Central Minnesota's Cleanest, Most Spacious Rental Toilets
                     <br>
@@ -83,35 +86,50 @@
         </div>
 
         <!-- main page row of service links w/imgs -->
-        <div class="main_services_row">
+        <div class="main_services_row mt-3">
             <a class="imgs_row" href="/services#standard">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg"
+                        alt="Porta Pottys in a row. Portable toilets rental">
+                </div>
                 <div class="img_in_row_text">Standard Toilet Rentals</div>
             </a>
             <a class="imgs_row" href="/services#ADA">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\20734.jpg"
+                        alt="Porta Pottys in a row. Portable toilets rental">
+                </div>
                 <div class="img_in_row_text">Wheelchair/ADA Rentals</div>
             </a>
             <a class="imgs_row" href="/services#handwashing">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-handwash-stations.jpg" alt="Hand washing stations. Handwashing stations rental">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\feature-handwash-stations.jpg"
+                        alt="Hand washing stations. Handwashing stations rental">
+                </div>
                 <div class="img_in_row_text">Handwashing Stations</div>
             </a>
             <a class="imgs_row" href="/services#servicing">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg"
+                        alt="Pump truck. Rental toilet servicing">
+                </div>
                 <div class="img_in_row_text">Private Toilet Servicing</div>
             </a>
             <a class="imgs_row" href="/services#camper">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\RV-Camper.jpg"
+                        alt="Camper. Rental toilet servicing">
+                </div>
                 <div class="img_in_row_text">Camper/RV Servicing</div>
             </a>
         </div>
 
         <!-- main page content ------------------------------------ -->
         <div class="container">
-                <div class="row main_page_content">
-                    <!-- semi side bar area on main page ---------------- -->
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 main_side">
-                        <div class="main_contact">
+            <div class="row main_page_content">
+                <!-- semi side bar area on main page ---------------- -->
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 main_side">
+                    <div class="main_contact">
                         <h1>Contact Us</h1>
                         <p>
                             <strong>CANS R US, LLC</strong>
@@ -124,7 +142,8 @@
                         <p>
                             <strong>Phone:</strong> 320.547.2478
                             <br>
-                            <strong>Email:</strong> <a class="link" href="mailto:greg@cansrusllc.com">greg@cansrusllc.com</a>
+                            <strong>Email:</strong> <a class="link"
+                                href="mailto:greg@cansrusllc.com">greg@cansrusllc.com</a>
                         </p>
 
                         <p>
@@ -132,7 +151,7 @@
                             <br>
                             Monday - Friday: 7am - 5pm
                             <br>
-                            Saturday & Sunday: Please Call 
+                            Saturday & Sunday: Please Call
                         </p>
                     </div>
                     <div class="certifications">
@@ -148,35 +167,48 @@
                     </div>
                 </div>
 
-                    <!-- actual main content area on main page ------------------->
-                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 main_content">
-                        <h1><center>CANS R US, LLC... Central Minnesota's Leading Portable Toilet Rental Company</center>
-                        </h1>                        
-                        <h2 style="font-size: large;"><center>Taking Care of Your Business in the Most Sanitary Ways Possible</center></h2>
-                        <br>
-                        <p>End your portable toilet rental search with CANS R US, LLC! Our Central Minnesota based portable toilet rental 
-                            company rents portable restrooms (porta potties), handwash stations, and other sanitary solutions for weddings, 
-                            family gatherings, music festivals, community events, and job sites. As a family owned and operated sanitation 
-                            company we provide more than just portable sanitary solutions. 
-                            We provide the professional servicing your porta-potty rental requires.
-                            <br><br>
-                            For over 25 years our sanitation technicians at Cans R Us have been taking care of Central Minnesota's business. 
-                            Providing everything from portable toilet rentals to emergency servicing, all of our services are available for 
-                            same-day or next-day completion. Our year-round portable toilet rentals are available for one-time or long-term use. 
-                            We even provide additional cleaning services if needed!
-                            <br><br>
-                            Whether you need one unit for a day or multiple units for a weekend festival, at Cans R Us we can deliver! 
-                            When you opt to rent from us, no job is too small or too large.
-                            <br><br>
-                            At CANS R US, LLC we handle it all when it comes to portable toilets, whether they are ours or are privately owned. 
-                            We welcome you to <a  class="link"  href="/contact" alt="contact page link">contact us</a> to ask questions or to 
-                            <a  class="link" href="/contact" alt="contact page link">request a no hassle quote</a> about our rental toilets 
-                            and related sanitary services... 320-547-2478.
+                <!-- actual main content area on main page ------------------->
+                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 main_content">
+                    <h1>
+                        <center>CANS R US, LLC... Central Minnesota's Leading Portable Toilet Rental Company</center>
+                    </h1>
+                    <h2 style="font-size: large;">
+                        <center>Taking Care of Your Business in the Most Sanitary Ways Possible</center>
+                    </h2>
+                    <br>
+                    <p>End your portable toilet rental search with CANS R US, LLC! Our Central Minnesota based portable
+                        toilet rental
+                        company rents portable restrooms (porta potties), handwash stations, and other sanitary
+                        solutions for weddings,
+                        family gatherings, music festivals, community events, and job sites. As a family owned and
+                        operated sanitation
+                        company we provide more than just portable sanitary solutions.
+                        We provide the professional servicing your porta-potty rental requires.
+                        <br><br>
+                        For over 25 years our sanitation technicians at Cans R Us have been taking care of Central
+                        Minnesota's business.
+                        Providing everything from portable toilet rentals to emergency servicing, all of our services
+                        are available for
+                        same-day or next-day completion. Our year-round portable toilet rentals are available for
+                        one-time or long-term use.
+                        We even provide additional cleaning services if needed!
+                        <br><br>
+                        Whether you need one unit for a day or multiple units for a weekend festival, at Cans R Us we
+                        can deliver!
+                        When you opt to rent from us, no job is too small or too large.
+                        <br><br>
+                        At CANS R US, LLC we handle it all when it comes to portable toilets, whether they are ours or
+                        are privately owned.
+                        We welcome you to <a class="link" href="/contact" alt="contact page link">contact us</a> to ask
+                        questions or to
+                        <a class="link" href="/contact" alt="contact page link">request a no hassle quote</a> about our
+                        rental toilets
+                        and related sanitary services... 320-547-2478.
 
 
-                        </p>
-                    </div>
+                    </p>
                 </div>
+            </div>
         </div>
 
     </div>
