--- a/flask_app/templates/private.html
+++ b/flask_app/templates/private.html
@@ -33,12 +33,12 @@
                     <li class="nav-item">
                         <a class="nav-link mx-5 underlineAnimate" href="/services">Services</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link ms-5 underlineAnimate" href="/products">Products</a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link ms-5 underlineAnimate" href="/gallery">Gallery</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link mx-5 underlineAnimate" href="/contact">Contact Us/Get Quote</a>
                     </li>
@@ -107,14 +107,14 @@
                             </span></span></strong></div>
                 <div><br></div>
                 <div><span style="color: rgb(127, 127, 127);"><strong><span style="font-size: 15px;"><span
-                                    data-custom-class="subtitle">Last updated <bdt class="question">April 15, 2023</bdt>
+                                    data-custom-class="subtitle">Last updated <bdt class="question">November 24, 2023</bdt>
                                     </span></span></strong></span></div>
                 <div><br></div>
                 <div><br></div>
                 <div><br></div>
                 <div style="line-height: 1.5;"><span style="color: rgb(127, 127, 127);"><span
                             style="color: rgb(89, 89, 89); font-size: 15px;"><span data-custom-class="body_text">This
-                                privacy notice for <bdt class="question">Melissa Holst Realtor<bdt class="block-component"></bdt>
+                                privacy notice for <bdt class="question">Cans R Us Inc<bdt class="block-component"></bdt>
                                 </bdt> (<bdt class="block-component"></bdt>"<bdt class="block-component"></bdt>
                                 <strong>Company</strong>
                                 <bdt class="statement-end-if-in-editor"></bdt>," "<strong>we</strong>,"
