--- a/flask_app/templates/services.html
+++ b/flask_app/templates/services.html
@@ -84,23 +84,33 @@
         <!-- main page row of service links w/imgs -->
         <div class="main_services_row mt-3">
             <a class="imgs_row" href="/services#standard">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
+                </div>
                 <div class="img_in_row_text">Standard Toilet Rentals</div>
             </a>
             <a class="imgs_row" href="/services#ADA">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\20734.jpg" alt="Porta Pottys in a row. Portable toilets rental">
+                </div>
                 <div class="img_in_row_text">Wheelchair/ADA Rentals</div>
             </a>
             <a class="imgs_row" href="/services#handwashing">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-handwash-stations.jpg" alt="Hand washing stations. Handwashing stations rental">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\feature-handwash-stations.jpg" alt="Hand washing stations. Handwashing stations rental">
+                </div>
                 <div class="img_in_row_text">Handwashing Stations</div>
             </a>
             <a class="imgs_row" href="/services#servicing">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
+                </div>
                 <div class="img_in_row_text">Private Toilet Servicing</div>
             </a>
             <a class="imgs_row" href="/services#camper">
-                <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
+                <div class="d-flex">
+                    <img class="img_in_row img_responsive" src="\static\imgs\RV-Camper.jpg" alt="Camper. Rental toilet servicing">
+                </div>
                 <div class="img_in_row_text">Camper/RV Servicing</div>
             </a>
         </div>
@@ -168,14 +178,14 @@
                     <br>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    immmaa porta potty picture
+                <div class="d-flex justify-content-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img class="img_services" src="\static\imgs\20732.jpeg" alt="standard toilet rental">
                 </div>
             </div>
             
             <div class="row services_page_content">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    immmaa porta potty picture
+                <div class="d-flex justify-content-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img class="img_services img_responsive" src="\static\imgs\20733.jpeg" alt="standard toilet rental">
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 services_content">
                     <h2 id="ADA">Wheelchair / ADA Portable Toilet Units</h2>
@@ -216,14 +226,14 @@
                     <br>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    immmaa porta potty picture
+                <div class="d-flex justify-content-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img class="img_services img_responsive" src="\static\imgs\20735.jpeg" alt="standard toilet rental">
                 </div>
             </div>
 
             <div class="row services_page_content">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    immmaa porta potty picture
+                <div class="d-flex justify-content-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img class="img_services img_responsive" src="\static\imgs\20732.jpeg" alt="standard toilet rental">
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 services_content">
                     <h2 id="servicing">Servicing of Privately Owned Toilet Units</h2>
@@ -243,8 +253,8 @@
                         
                         <p>In a short length of time we can pump your camper or RV’s holding tanks, emptying both black and gray water tanks. We can also provide any additional sanitization services that may be needed. Continue camping or bring the camper straight home, either way we can do the on-site pumping work for you. <a  class="link"  href="/contact" alt="contact page link">Contact us</a> with questions or to request a quote.</p></p></p> 
                 </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                        immmaa porta potty picture
+                    <div class="d-flex justify-content-center col-lg-4 col-md-4 col-sm-4 col-xs-4 mb-5">
+                        <img class="img_services img_responsive" src="\static\imgs\RV-Camper-small.jpg" alt="standard toilet rental">
                     </div>
             </div>
         </div>
