--- a/flask_app/templates/contact.html
+++ b/flask_app/templates/contact.html
@@ -9,6 +9,8 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Contact CANS R US, LLC – Pierz, MN | 320.547.2478</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
 
 <body>
@@ -39,9 +41,9 @@
     </div>
 
     <!--burger navbar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container justify-content-between">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,12 +56,6 @@
                     <li class="nav-item">
                         <a class="nav-link mx-5 underlineAnimate" href="/services">Services</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link mx-5 underlineAnimate" href="/products">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-5 underlineAnimate" href="/gallery">Gallery</a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link active mx-5 underlineAnimate" aria-current="page" href="">Contact Us/Get
                             Quote</a>
@@ -149,31 +145,31 @@
                     <form class="row g-3" action="/submit" method="post">
                         <div class="col-md-6">
                             <label for="first_name" class="form-label">*First Name</label>
-                            <input type="text" class="form-control" name="first_name" required>
+                            <input type="text" id="first_name" class="form-control" name="first_name" required>
                         </div>
                         <div class="col-md-6">
                             <label for="last_name" class="form-label">*Last Name</label>
-                            <input type="text" class="form-control" name="last_name" required>
+                            <input type="text" id="last_name" class="form-control" name="last_name" required>
                         </div>
                         <div class="col-md-6">
                             <label for="email" class="form-label">*Email</label>
-                            <input type="email" class="form-control" name="email" required>
+                            <input type="email" id="email" class="form-control" name="email" required>
                         </div>
                         <div class="col-md-6">
-                            <label for="phone" class="form-label">*Phone: (###-###-####)</label>
-                            <input type="phone" class="form-control" name="phone" required>
+                            <label for="phone" class="form-label">*Phone</label>
+                            <input type="phone" id="phone" class="form-control" name="phone" required>
                         </div>
                         <div class="col-md-6">
                             <label for="area" class="form-label">*Delivery Area</label>
-                            <input type="text" class="form-control" name="area" required>
+                            <input type="text" id="area" class="form-control" name="area" required>
                         </div>
                         <div class="col-md-6">
                             <label for="date" class="form-label">*Delivery Date</label>
-                            <input type="date" class="form-control" name="date" required>
+                            <input type="date" id="date" class="form-control" name="date" required>
                         </div>
                         <div class="col-md-12">
                             <label for="comments" class="form-label">Question or Comments</label>
-                            <textarea class="form-control" name="comments" rows="3"></textarea>
+                            <textarea class="form-control" id="comments" name="comments" rows="3"></textarea>
                         </div>
                         <button class="btn mx-auto">Submit</button>
                     </form>
@@ -194,8 +190,13 @@
 </body>
 
 <!--script for burger menu-->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js" defer></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous" defer></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.5/jquery.inputmask.min.js"></script>
+    <script src="./static/js/script.js" defer></script>
 
 </html>
